# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml
brain_games/: calc.py  cli.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_even.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
