[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "hexlet 1 lvl project"
authors = ["Dobro <matematikaigor@gmail.com>"]
license = "1488228"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"