[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "hexlet 1 lvl project"
authors = ["Dobro <matematikaigor@gmail.com>"]
license = "1488228"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
]
repository = "https://github.com/YuneYune/python-project-lvl1"


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
wemake-python-styleguide = "^0.14.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"
